src/snapshots/indent_s_expr__tests__parse_sexp_escaping-7.snap
---
source: src/lib.rs
expression: "parse_sexp(r#\"(fn \"string with\\ spaces\")\"#)"
---
Ok(
    [
        Token {
            kind: OpenParen,
            range: (
                0,
                1,
            ),
            content: "(",
        },
        Token {
            kind: Symbol,
            range: (
                1,
                2,
            ),
            content: "fn",
        },
        Token {
            kind: String,
            range: (
                5,
                24,
            ),
            content: "string with\\ spaces",
        },
        Token {
            kind: CloseParen,
            range: (
                25,
                26,
            ),
            content: ")",
        },
    ],
)
