src/snapshots/indent_s_expr__tests__parse_sexp_nested_string.snap
---
source: src/lib.rs
expression: "parse_sexp(r#\"(join \"abc\\\"\" \"\\\"def\")\"#)"
---
Ok(
    [
        Token {
            kind: OpenParen,
            range: (
                0,
                1,
            ),
            content: "(",
        },
        Token {
            kind: Symbol,
            range: (
                1,
                2,
            ),
            content: "join",
        },
        Token {
            kind: String,
            range: (
                7,
                12,
            ),
            content: "abc\\\"",
        },
        Token {
            kind: String,
            range: (
                15,
                20,
            ),
            content: "\\\"def",
        },
        Token {
            kind: CloseParen,
            range: (
                21,
                22,
            ),
            content: ")",
        },
    ],
)
