src/snapshots/indent_s_expr__tests__parse_sexp_numerics-2.snap
---
source: src/lib.rs
expression: "parse_sexp(\"(+ 123ax(ax123))\")"
---
Ok(
    [
        Token {
            kind: OpenParen,
            range: (
                0,
                1,
            ),
            content: "(",
        },
        Token {
            kind: Symbol,
            range: (
                1,
                2,
            ),
            content: "+",
        },
        Token {
            kind: Number,
            range: (
                3,
                4,
            ),
            content: "123a",
        },
        Token {
            kind: OpenParen,
            range: (
                8,
                9,
            ),
            content: "(",
        },
        Token {
            kind: Symbol,
            range: (
                9,
                10,
            ),
            content: "ax123",
        },
        Token {
            kind: CloseParen,
            range: (
                14,
                15,
            ),
            content: ")",
        },
        Token {
            kind: CloseParen,
            range: (
                15,
                16,
            ),
            content: ")",
        },
    ],
)
