src/snapshots/indent_s_expr__tests__parse_sexp_symbols.snap
---
source: src/lib.rs
expression: "parse_sexp(r#\"(fn \"string\" \"string with spaces\")\"#)"
---
Ok(
    [
        Token {
            kind: OpenParen,
            range: (
                0,
                1,
            ),
            content: "(",
        },
        Token {
            kind: Symbol,
            range: (
                1,
                2,
            ),
            content: "fn",
        },
        Token {
            kind: String,
            range: (
                5,
                11,
            ),
            content: "string",
        },
        Token {
            kind: String,
            range: (
                14,
                32,
            ),
            content: "string with spaces",
        },
        Token {
            kind: CloseParen,
            range: (
                33,
                34,
            ),
            content: ")",
        },
    ],
)
